--- a/naturedex/src/components/EntriesHeader.module.css
+++ b/naturedex/src/components/EntriesHeader.module.css
@@ -1,11 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
+
+h1 {
+    font-family: 'Rancho';
+}
+
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+  }
+  
+.menuContainer {
+    cursor: pointer;
 }
   
-  .menuIcon,
-  .searchIcon {
+.menuIcon,
+.searchIcon {
     cursor: pointer;
+}
+  
+.menuIcon:hover,
+.searchIcon:hover {
+    opacity: 0.7;
 }
