--- a/naturedex/src/components/FloatingButton.module.css
+++ b/naturedex/src/components/FloatingButton.module.css
@@ -1,7 +1,7 @@
 .floatingButton {
     position: fixed;
-    bottom: 2rem; /* Ajustamos la posición hacia arriba */
-    right: 2rem;  /* Ajustamos la posición hacia la izquierda */
+    bottom: 2rem;
+    right: 2rem;  
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -10,6 +10,6 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    z-index: 1; /* Asegura que el botón esté por encima del contenido */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para dar sensación de elevación */
+    z-index: 1; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
