--- a/naturedex/src/components/EntriesHeader.module.css
+++ b/naturedex/src/components/EntriesHeader.module.css
@@ -6,7 +6,8 @@ h1 {
 
 .header {
     display: flex;
-    justify-content: space-between;
+		width: 100%;
+    justify-content: space-around;
     align-items: center;
     padding: 1rem;
   }
