Finished to load the history

--- a/naturedex/src/components/EntriesHeader.module.css
+++ b/naturedex/src/components/EntriesHeader.module.css
@@ -7,9 +7,9 @@ h1 {
 .header {
     display: flex;
 		width: 100%;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
-    padding: 1rem;
+		padding: 1rem 0;
   }
   
 .menuContainer {
@@ -19,6 +19,7 @@ h1 {
 .menuIcon,
 .searchIcon {
     cursor: pointer;
+		margin-inline: 2rem;
 }
   
 .menuIcon:hover,
