--- a/naturedex/src/pages/register/Register.module.css
+++ b/naturedex/src/pages/register/Register.module.css
@@ -1,17 +1,10 @@
-label{
+.myLabel{
 	position: absolute;
-	transform: translate(0,-30px);
+	transform: translate(0,-40px);
   pointer-events: none;
   font-size: 22px;
 }
-input{
-	width: 100%;
-	height: 30px;
-	font-size: 1em;
-	border: none;
-	border-radius: 5px;
-	border-bottom: 1px solid black;
-}
+
 
 .principalContainer{
 	display: flex;
@@ -53,6 +46,15 @@ input{
 	margin-block: 1.5em;
 }
 
+.inputContainer input{
+	width: 100%;
+	height: 30px;
+	font-size: 1em;
+	border: none;
+	border-radius: 5px;
+	border-bottom: 1px solid black;
+}
+
 .insideForm{
 	width: 90%;
 	display: flex;
@@ -70,4 +72,16 @@ input{
 	border: none;
 	border-radius: 10px;
 	margin-top: 20px;
+}
+
+.signinMessage {
+    text-align: center;
+    margin-top: 20px;
+    color: #79ac78;
+}
+  
+.signinLink {
+    color: #618264;
+    text-decoration: none;
+    font-weight: bold;
 }
