--- a/naturedex/src/components/PopUp.module.css
+++ b/naturedex/src/components/PopUp.module.css
@@ -57,3 +57,10 @@ p {
 .buttonContainer button p {
     margin-top: 10px;
 }
+
+.loader{
+	position:absolute; 
+	top: 50%; 
+	left: 50%; 
+	transform: translate(-50%, -50%);
+}
